--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGODB_URI=mongodb://localhost:27017/aura999
+MONGODB_URI=mongodb+srv://chaturveditanu975_db_user:N2WnPXfnvdP0lsPi@aura99.dkxg4do.mongodb.net/?appName=Aura99
 JWT_SECRET=ablkugfugaru8effklabfkjbalijLIGIGKldfgliuai
 JWT_EXPIRE=7d
 
