--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,7 +1,7 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "react",
+  "framework": "vite",
   "env": {
     "VITE_API_URL": "@vite_api_url",
     "VITE_SOCKET_URL": "@vite_socket_url"
